Added swagger parameters
