# API/src/controllers/components/componentsController.ts
@@ -3,8 +3,9 @@ import Component from '../../models/components/Component';
 import { IComponent } from '../../types/models';
 
 const getAllComponents = async (req: Request, res: Response): Promise<void> => {
+	/*  #swagger.parameters['$ref'] = ['#/components/parameters/componentBrand', '#/components/parameters/componentName', '#/components/parameters/componentType'] */
 	try {
-		const components: IComponent[] = await Component.find();
+		const components: IComponent[] = await Component.find(req.query);
 		res.status(200).json(components);
 	} catch (error: any) {
 		res.status(500).json({ message: error.message });
