# API/src/swagger/swagger.json
@@ -1,5 +1,5 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
     "title": "HardwareAPI",
@@ -7,63 +7,15 @@
     "contact": {
       "name": "API Support",
       "email": "jordanmalekera.dev@proton.me"
-    },
-    "hosts": "localhost:4000",
-    "basePath": "/api/v1/",
-    "schemes": [
-      "http"
-    ],
-    "consumes": [
-      "application/json"
-    ],
-    "produces": [
-      "application/json"
-    ],
-    "tags": [],
-    "securityDefinitions": {},
-    "definitions": {
-      "successResponse200": {
-        "code": 200,
-        "message": "Success"
-      },
-      "errorResponse400": {
-        "code": 400,
-        "message": "The request was malformed or invalid. Please check the request parameters."
-      },
-      "errorResponse401": {
-        "code": 401,
-        "message": "Authentication failed or user lacks proper authorization."
-      },
-      "errorResponse403": {
-        "code": 403,
-        "message": "You do not have permission to access this resource."
-      },
-      "errorResponse404": {
-        "code": 404,
-        "message": "The requested resource could not be found on the server."
-      },
-      "errorResponse500": {
-        "code": 500,
-        "message": "An unexpected error occurred on the server. Please try again later."
-      }
     }
   },
-  "host": "localhost:3000",
-  "basePath": "/",
-  "schemes": [
-    "http"
+  "servers": [
+    {
+      "url": "http://localhost:4000"
+    }
   ],
+  "securityDefinitions": {},
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/v1/components/{id}": {
       "get": {
         "description": "",
@@ -72,7 +24,9 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -88,9 +42,114 @@
     "/api/v1/components/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/componentBrand"
+          },
+          {
+            "$ref": "#/components/parameters/componentName"
+          },
+          {
+            "$ref": "#/components/parameters/componentType"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/components/cpu/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/components/cpu/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/components/gpu/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/components/gpu/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
@@ -106,7 +165,9 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -140,6 +201,152 @@
           "500": {
             "description": "Internal Server Error"
           }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "componentSchema": {
+        "type": "object",
+        "properties": {
+          "brand": {
+            "type": "string",
+            "example": "string"
+          },
+          "name": {
+            "type": "string",
+            "example": "string"
+          },
+          "componentType": {
+            "type": "object",
+            "properties": {
+              "enum": {
+                "type": "array",
+                "example": [
+                  "CPU",
+                  "GPU",
+                  "RAM"
+                ],
+                "items": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "images": {
+            "type": "string",
+            "example": "string[]"
+          }
+        }
+      },
+      "successResponse200": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "number",
+            "example": 200
+          },
+          "message": {
+            "type": "string",
+            "example": "Success"
+          }
+        }
+      },
+      "errorResponse400": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "number",
+            "example": 400
+          },
+          "message": {
+            "type": "string",
+            "example": "The request was malformed or invalid. Please check the request parameters."
+          }
+        }
+      },
+      "errorResponse401": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "number",
+            "example": 401
+          },
+          "message": {
+            "type": "string",
+            "example": "Authentication failed or user lacks proper authorization."
+          }
+        }
+      },
+      "errorResponse403": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "number",
+            "example": 403
+          },
+          "message": {
+            "type": "string",
+            "example": "You do not have permission to access this resource."
+          }
+        }
+      },
+      "errorResponse404": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "number",
+            "example": 404
+          },
+          "message": {
+            "type": "string",
+            "example": "The requested resource could not be found on the server."
+          }
+        }
+      },
+      "errorResponse500": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "number",
+            "example": 500
+          },
+          "message": {
+            "type": "string",
+            "example": "An unexpected error occurred on the server. Please try again later."
+          }
+        }
+      }
+    },
+    "parameters": {
+      "componentBrand": {
+        "name": "brand",
+        "in": "query",
+        "required": false,
+        "schema": {
+          "type": "string"
+        }
+      },
+      "componentName": {
+        "name": "name",
+        "in": "query",
+        "required": false,
+        "schema": {
+          "type": "string"
+        }
+      },
+      "componentType": {
+        "name": "componentType",
+        "in": "query",
+        "required": false,
+        "schema": {
+          "type": "enum",
+          "enum": [
+            "CPU",
+            "GPU",
+            "RAM"
+          ]
         }
       }
     }
